--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:19021965@localhost:3306/server-login"
+DATABASE_URL="mysql://root:19021965@localhost:3306/serverlogin"
+JWT_SECRET="secret"
