--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://root:19021965@localhost:3306/serverlogin"
+DATABASE_URL="mysql://root:123456789@localhost:3306/database"
 JWT_SECRET="secret"
 FRONTEND_URL="http://localhost:5501"
